1.99.15
- some more error messages were put in the code
- P4A_Mask::setIcon(), getIcon(), setIconSize and getIconSize() were added

1.99.14
- First Ajax Popup implementation
- P4A_MASK::isPopup() was added
- P4A_MASK::getAsString() was added
- P4A::openPopup() was added
- P4A::closePopup() was added
- popup.js was added
- popup.tpl was added
- beforeSetActivePage handler was added to P4A_Tab_Pane
- afterSetActivePage handler was added to P4A_Tab_Pane
- a bug in P4A_Collection::nextItem was fixed
- PEAR::Console_Getopt was updated to 1.2.1
- PEAR::Validate was updated to 0.7.0
- PEAR::MDB2 was updated to 2.3.0
- PEAR::MDB2_Driver_mysql was updated to 1.3.0
- PEAR::MDB2_Driver_mysqli was updated to 1.3.0
- PEAR::MDB2_Driver_oci8 was updated to 1.3.0
- PEAR::MDB2_Driver_pgsql was updated to 1.3.0
- PEAR::MDB2_Driver_sqlite was updated to 1.3.0
- if showPrevMask is called within a popup, the popup is closed
- P4A_Collection now checks if an object still exists when doing nextItem(), if it was destroyed, then the collection is updated removing the reference
- "prototype" javascript library was updated to 1.5.0_rc2 to avoid multicheckbox ajax submit bug
- length property and setLength()/getLength() methods were added to P4A_Data_Field
- P4A_AUTO_MAXLENGTH constant was added (default = true)
- P4A_Field::getAutoMaxlength() was added
- automatic maxlength html attribute compilation was added (reading from the attributes of the data field coming from a db), available only for text/password fields
- P4A_Widget::setProperty(), P4A_Widget::getProperty(), P4A_Widget::unsetProperty() now turn property name to lower case
- Bug 1616552 was solved, now anchoring invisible widgets on P4A_Frame or P4A_Fieldset does not use space on the page
- ajax debug file is now created under P4A_COMPILE_DIR instead of session.save_path directory
- switched 10px margin from frame/fieldset to widgets
- Bug on processAjaxResponse was solved
- Various IExplorer6 bugs was solved

1.99.13