@@ -291,6 +291,7 @@
 		define('P4A_AJAX_DEBUG', false);
 	}
 
+	define('P4A_VERSION', '1.99.15');
 	define('P4A_ORDER_ASCENDING', 'ASC');
 	define('P4A_ORDER_DESCENDING', 'DESC');
 	define('P4A_NULL', 'P4A_NULL');
